tests/golden/errors/traceback_chain_from_none.py
# `raise ... from None` suppresses the implicit __context__ display.
try:
    raise ValueError("hidden")
except ValueError:
    raise RuntimeError("visible") from None
